@@ -30,6 +30,7 @@ Revision 0.1.10, released XX-XX-2017
   allowed values, which aligns well with the notion of subtyping.
 - Fix to NamedTypes methods to handle .getTagMap() returning None
 - Author's email changed, copyright extended to 2017
+- Fix to Set/Sequence.setDefaultComponents() to return self
 
 Revision 0.1.9, released 28-09-2015
 -----------------------------------
